fix responsive alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,7 +143,7 @@ div label {
     float: left;
   }
 
-  main#content {
+  main#appContent {
     margin-left: 0;
     margin-top: 20px;
   }
